--- a/views/bubble.html
+++ b/views/bubble.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Bubble Sort</title>
   <link rel="stylesheet" href="lib/css/mocha.css">
 
 </head>
