--- a/views/bubble.html
+++ b/views/bubble.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bubble Sort</title>
+  <title>Quick Sort</title>
   <link rel="stylesheet" href="lib/css/mocha.css">
 
 </head>
 <body>
-  <script src="test/bubble-spec.js"type="text/javascript"></script>
+  <script src="routes/quick-sort.js"type="text/javascript"></script>
 </body>
 </html>
