--- a/views/quick-sort.html
+++ b/views/quick-sort.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sorts!</title>
+  <title>Quick Sort</title>
 </head>
 <body>
   <h1>Test</h1>
