--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Index</title>
+  <title>Sorting Algorithms</title>
 </head>
 <body>
-  <h1>Index</h1>
+
+   {{{body}}}
+
 </body>
 </html>
