--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <style>
+    .chart div {
+      font: 10px sans-serif;
+      background-color: steelblue;
+      text-align: right;
+      padding: 3px;
+      margin: 1px;
+      color: white;
+    }
+  </style>
   <title>Sorting Algorithms</title>
 </head>
 <body>
 
    {{{body}}}
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script type="text/javascript" src="visualize.js"></script>
 </body>
 </html>
